--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 *.o
 *.o[ls]
 
+/target/
+/liburing-rs/target/
+
 /src/liburing.a
 /src/liburing.so*
 /src/liburing-ffi.a
@@ -31,8 +34,11 @@
 /examples/zcrx
 
 /test/*.t
+/test/*.rt
 /test/*.dmesg
 /test/output/
+/test/liburing_rs*
+/test/target/
 
 # Clang's compilation database file and directory.
 /.cache
