--- a/test/liburing.h.in
+++ b/test/liburing.h.in
@@ -548,6 +548,11 @@ IOURINGINLINE void io_uring_prep_bind(struct io_uring_sqe *sqe, int fd,
 IOURINGINLINE void io_uring_prep_listen(struct io_uring_sqe *sqe, int fd,
 				      int backlog);
 
+struct epoll_event;
+IOURINGINLINE void io_uring_prep_epoll_wait(struct io_uring_sqe *sqe, int fd,
+					    struct epoll_event *events,
+					    int maxevents, unsigned flags);
+
 IOURINGINLINE void io_uring_prep_files_update(struct io_uring_sqe *sqe,
 					      int *fds, unsigned nr_fds,
 					      int offset);
