--- a/test/Makefile
+++ b/test/Makefile
@@ -356,7 +356,8 @@ rust-runtests-parallel: $(run_rust_test_targets) $(asan_run_rust_test_targets)
 	@echo "All tests passed"
 
 CARGO_TOOLCHAIN ?= x86_64-unknown-linux-gnu
-CARGO_FLAGS := --profile release-with-debug --target $(CARGO_TOOLCHAIN)
+CARGO_FLAGS ?= --profile release-with-debug --target $(CARGO_TOOLCHAIN)
+OBJCOPY ?= objcopy
 
 RUSTFLAGS ?=
 
@@ -367,6 +368,7 @@ endif
 
 liburing_rs: liburing.h.in
 	+ CC=$(CC) CXX=$(CXX) RUSTFLAGS="$(RUSTFLAGS)" cargo +nightly build $(CARGO_FLAGS) -Z unstable-options --artifact-dir .
+	$(OBJCOPY) --weaken-symbol io_uring_get_sqe liburing_rs_test.a
 	cp liburing.h.in liburing.h
 
 %.rt: %.c $(helpers) helpers.h liburing_rs
