--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,5 @@
-max_width = 120
-fn_params_layout = "compressed"
-fn_call_width = 120
+max_width = 100
+fn_params_layout = "Compressed"
+fn_call_width = 100
+brace_style = "AlwaysNextLine"
+indent_style = "Visual"
