--- a/examples/Makefile
+++ b/examples/Makefile
@@ -44,11 +44,33 @@ endif
 all_targets += ucontext-cp helpers.o
 
 example_targets := $(patsubst %.c,%,$(patsubst %.cc,%,$(example_srcs)))
+rust_example_targets := $(patsubst %.c,%-rs,$(patsubst %.cc,%-rs,$(example_srcs)))
+rust_example_targets += ucontext-cp-rs
 all_targets += $(example_targets)
 
 helpers = helpers.o
 
 all: $(example_targets)
+
+CARGO_TOOLCHAIN ?= x86_64-unknown-linux-gnu
+CARGO_FLAGS ?= --profile release-with-debug --target $(CARGO_TOOLCHAIN)
+OBJCOPY ?= objcopy
+
+RUSTFLAGS ?=
+
+ifeq ($(CONFIG_USE_SANITIZER),y)
+	CARGO_FLAGS += -Zbuild-std --features sanitizers
+	RUSTFLAGS += -Zsanitizer=address
+endif
+
+liburing_rs: liburing.h.in
+	+ CC=$(CC) CXX=$(CXX) RUSTFLAGS="$(RUSTFLAGS)" cargo +nightly clippy $(CARGO_FLAGS)
+	+ CC=$(CC) CXX=$(CXX) RUSTFLAGS="$(RUSTFLAGS)" cargo +nightly build $(CARGO_FLAGS) -Z unstable-options --artifact-dir . --manifest-path ../test/Cargo.toml
+	$(OBJCOPY) --weaken-symbol io_uring_get_sqe liburing_rs_test.a
+	cp liburing.h.in liburing.h
+
+liburing_rs_examples: $(rust_example_targets)
+	rm liburing.h
 
 helpers.o: helpers.c
 	$(QUIET_CC)$(CC) $(CPPFLAGS) $(CFLAGS) -o $@ -c $<
@@ -56,7 +78,10 @@ helpers.o: helpers.c
 %: %.c $(helpers) ../src/liburing.a
 	$(QUIET_CC)$(CC) $(CPPFLAGS) $(CFLAGS) -o $@ $< $(helpers) $(LDFLAGS)
 
-clean:
-	@rm -f $(all_targets)
+%-rs: %.c $(helpers) liburing_rs
+	$(QUIET_CC)$(CC) $(CPPFLAGS) $(CFLAGS) -o $@ $< $(helpers) liburing_rs_test.a $(LDFLAGS)
 
-.PHONY: all clean
+clean:
+	@rm -f $(all_targets) $(rust_example_targets) liburing_rs_test.a
+
+.PHONY: all clean liburing_rs_examples
