--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -212,6 +212,7 @@ jobs:
           rustup target add ${{matrix.build_args.cargo_toolchain}} --toolchain stable;
           rustup target add ${{matrix.build_args.cargo_toolchain}} --toolchain nightly;
           rustup component add rust-src --toolchain nightly --target ${{matrix.build_args.cargo_toolchain}};
+          rustup component add rust-std --toolchain nightly --target aarch64-unknown-linux-gnu
 
       - name: Build
         if: ${{matrix.build_args.sanitize == '0'}}
