--- a/test/liburing.h.in
+++ b/test/liburing.h.in
@@ -13,10 +13,12 @@
 #include <fcntl.h>
 #include <sched.h>
 #include <linux/swab.h>
+#include <linux/filter.h>
 #include <sys/wait.h>
 #include "liburing/compat.h"
 #include "liburing/io_uring.h"
 #include "liburing/io_uring/query.h"
+#include "liburing/io_uring/bpf_filter.h"
 #include "liburing/io_uring_version.h"
 
 #ifndef uring_unlikely
@@ -355,6 +357,10 @@ int io_uring_register_ifq(struct io_uring *ring,
 int io_uring_register_clock(struct io_uring *ring,
 			    struct io_uring_clock_register *arg)
    LIBURING_NOEXCEPT;
+int io_uring_register_bpf_filter(struct io_uring *ring,
+				 struct io_uring_bpf *bpf) LIBURING_NOEXCEPT;
+int io_uring_register_bpf_filter_task(struct io_uring_bpf *bpf)
+				 LIBURING_NOEXCEPT;
 
 int io_uring_get_events(struct io_uring *ring) LIBURING_NOEXCEPT;
 int io_uring_submit_and_get_events(struct io_uring *ring) LIBURING_NOEXCEPT;
